samples/_failures_safe/1761662318_894dac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10cb0b5f.c: In function ‘main’:
./samples/SAFE/__tmp_10cb0b5f.c:161:9: error: expected declaration or statement at end of input
  161 |         printf("Decompression error: data mismatch\n");
      |         ^~~~~~
./samples/SAFE/__tmp_10cb0b5f.c:161:9: error: expected declaration or statement at end of input
